Header Luggage 서브 페이지 연결

--- a/sub-luggage.html
+++ b/sub-luggage.html
@@ -12,6 +12,9 @@
   <link rel="stylesheet" href="./css/common.css">
   <link rel="stylesheet" href="./css/sub-luggage.css">
   <link rel="stylesheet" href="./css/color-swatch.css">
+
+  <script src="./js/jquery-3.7.1.min.js"></script>
+  <script src="./js/script.js"></script>
 </head>
 
 <body>
@@ -26,65 +29,67 @@
         </h1>
         <ul class="gnb">
           <li>
-            <span><a href="#">LUGGAGE</a></span>
-            <ul class="gnb-dropdown gnb-menu-luggage">
-              <li>
-                <strong>소재</strong>
-                <div class="gnb-material">
-                  <a href="#">하드케이스</a>
-                  <a href="#">소프트 케이스</a>
-                  <a href="#">알루미늄</a>
-                </div>
-                <a href="#" class="gnb-link">여행가방 모두 보기</a>
-              </li>
-              <li>
-                <strong>크기</strong>
-                <div class="gnb-size">
-                  <a href="#">기내용</a>
-                  <a href="#">중형수하물</a>
-                  <a href="#">대형수하물</a>
-                </div>
-              </li>
-              <li>
-                <strong>색상</strong>
-                <div class="gnb-color">
-                  <a href="#">모노톤</a>
-                  <a href="#">쿨톤</a>
-                  <a href="#">웜톤</a>
-                </div>
-              </li>
-              <li>
-                <strong>주요 기능</strong>
-                <div class="gnb-function">
-                  <a href="#">이중코일지퍼</a>
-                  <a href="#">자동제어장치</a>
-                  <a href="#">지문인식잠금</a>
-                  <a href="#">마그네틱 지퍼</a>
-                  <a href="#">돌출 잠금</a>
-                  <a href="#">서스펜션 휠</a>
-                  <a href="#">USB 포트</a>
-                  <a href="#">내장형 저울</a>
-                </div>
-              </li>
-              <li>
-                <strong>브랜드</strong>
-                <div class="gnb-brand">
-                  <a href="#"><i class="hidden">Samsonite</i></a>
-                  <a href="#"><i class="hidden">Samsonite Blacklabel</i></a>
-                  <a href="#"><i class="hidden">Samsonite Red</i></a>
-                </div>
-              </li>
-              <li>
-                <strong>Collection</strong>
-                <div class="gnb-collection">
-                  <a href="#">Richmon II</a>
-                  <a href="#">SBL Re. classic</a>
-                  <a href="#">C-Lite</a>
-                  <a href="#">Upscape</a>
-                  <a href="#">Toiis Blossom</a>
-                </div>
-              </li>
-            </ul>
+            <span><a href="sub-luggage.html">LUGGAGE</a></span>
+            <div class="gnb-dropdown-wrap">
+              <ul class="gnb-dropdown gnb-menu-luggage">
+                <li>
+                  <strong>소재</strong>
+                  <div class="gnb-material">
+                    <a href="#">하드케이스</a>
+                    <a href="#">소프트 케이스</a>
+                    <a href="#">알루미늄</a>
+                  </div>
+                  <a href="#" class="gnb-link">여행가방 모두 보기</a>
+                </li>
+                <li>
+                  <strong>크기</strong>
+                  <div class="gnb-size">
+                    <a href="#">기내용</a>
+                    <a href="#">중형수하물</a>
+                    <a href="#">대형수하물</a>
+                  </div>
+                </li>
+                <li>
+                  <strong>색상</strong>
+                  <div class="gnb-color">
+                    <a href="#">모노톤</a>
+                    <a href="#">쿨톤</a>
+                    <a href="#">웜톤</a>
+                  </div>
+                </li>
+                <li>
+                  <strong>주요 기능</strong>
+                  <div class="gnb-function">
+                    <a href="#">이중코일지퍼</a>
+                    <a href="#">자동제어장치</a>
+                    <a href="#">지문인식잠금</a>
+                    <a href="#">마그네틱 지퍼</a>
+                    <a href="#">돌출 잠금</a>
+                    <a href="#">서스펜션 휠</a>
+                    <a href="#">USB 포트</a>
+                    <a href="#">내장형 저울</a>
+                  </div>
+                </li>
+                <li>
+                  <strong>브랜드</strong>
+                  <div class="gnb-brand">
+                    <a href="#"><i class="hidden">Samsonite</i></a>
+                    <a href="#"><i class="hidden">Samsonite Blacklabel</i></a>
+                    <a href="#"><i class="hidden">Samsonite Red</i></a>
+                  </div>
+                </li>
+                <li>
+                  <strong>Collection</strong>
+                  <div class="gnb-collection">
+                    <a href="#">Richmon II</a>
+                    <a href="#">SBL Re. classic</a>
+                    <a href="#">C-Lite</a>
+                    <a href="#">Upscape</a>
+                    <a href="#">Toiis Blossom</a>
+                  </div>
+                </li>
+              </ul>
+            </div>
           </li>
           <li><span><a href="#">BACKPACKS</a></span></li>
           <li><span><a href="#">BAGS</a></span></li>
