필터 아코디언 적용

--- a/sub-luggage.html
+++ b/sub-luggage.html
@@ -163,9 +163,9 @@
               </div>
             </div>
             <div class="filter-con">
-              <div class="filter-size filter-item">
+              <div class="filter-item">
                 <strong>크기</strong>
-                <div class="filter-inner">
+                <div class="filter-inner filter-size">
                   <ul class="filter-option-list">
                     <li><a href="#" class="filter-option">기내용/소형</a></li>
                     <li><a href="#" class="filter-option active">중형수하물</a></li>
