아코디언 오류 수정, 필터 선택시 active 클래스 적용되도록 수정

--- a/sub-luggage.html
+++ b/sub-luggage.html
@@ -164,26 +164,26 @@
             </div>
             <div class="filter-con">
               <div class="filter-item">
-                <strong>크기</strong>
+                <strong class="filter-sub-title">크기</strong>
                 <div class="filter-inner filter-size">
                   <ul class="filter-option-list">
                     <li><a href="#" class="filter-option">기내용/소형</a></li>
-                    <li><a href="#" class="filter-option active">중형수하물</a></li>
-                    <li><a href="#" class="filter-option active">대형수하물</a></li>
+                    <li><a href="#" class="filter-option ">중형수하물</a></li>
+                    <li><a href="#" class="filter-option ">대형수하물</a></li>
                     <li><a href="#" class="filter-option">특대형수하물</a></li>
                   </ul>
                 </div>
               </div>
               <div class="filter-color filter-item">
-                <strong>색상</strong>
+                <strong class="filter-sub-title">색상</strong>
                 <div class="filter-inner">
                   <ul class="filter-option-list">
                     <li><a href="#" class="filter-option filter-option-color">
                         <span class="gray"><i class="hidden">filter-color-bg</i></span>그레이</a>
                     </li>
-                    <li><a href="#" class="filter-option filter-option-color active"><span class="green"><i
+                    <li><a href="#" class="filter-option filter-option-color "><span class="green"><i
                             class="hidden">filter-color-bg</i></span>그린</a></li>
-                    <li><a href="#" class="filter-option filter-option-color active"><span class="navy"><i
+                    <li><a href="#" class="filter-option filter-option-color "><span class="navy"><i
                             class="hidden">filter-color-bg</i></span>네이비</a></li>
                     <li><a href="#" class="filter-option filter-option-color"><span class="light-green"><i
                             class="hidden">filter-color-bg</i></span>라이트그린</a></li>
@@ -193,7 +193,7 @@
                             class="hidden">filter-color-bg</i></span>베이지</a></li>
                     <li><a href="#" class="filter-option filter-option-color"><span class="black"><i
                             class="hidden">filter-color-bg</i></span>블랙</a></li>
-                    <li><a href="#" class="filter-option filter-option-color active"><span class="blue"><i
+                    <li><a href="#" class="filter-option filter-option-color "><span class="blue"><i
                             class="hidden">filter-color-bg</i></span>블루</a></li>
                     <li><a href="#" class="filter-option filter-option-color"><span class="silver"><i
                             class="hidden">filter-color-bg</i></span>실버</a></li>
@@ -211,12 +211,12 @@
                 </div>
               </div>
               <div class="filter-function filter-item">
-                <strong>기능</strong>
+                <strong class="filter-sub-title">기능</strong>
                 <div class="filter-inner">
                   <ul class="filter-option-list">
                     <li title="3 in 1 잠금장치"><a href="#" class="filter-option">3 in 1 잠금장치</a></li>
-                    <li title="Easy-Brake™ 시스템"><a href="#" class="filter-option active">Easy-Brake™ 시스템</a></li>
-                    <li title="Aero Trac™ Whirl Suspension Wheels"><a href="#" class="filter-option active">Aero Trac™
+                    <li title="Easy-Brake™ 시스템"><a href="#" class="filter-option ">Easy-Brake™ 시스템</a></li>
+                    <li title="Aero Trac™ Whirl Suspension Wheels"><a href="#" class="filter-option ">Aero Trac™
                         Whirl
                         Suspension Wheels</a></li>
                     <li title="USB 포트"><a href="#" class="filter-option">USB 포트</a></li>
@@ -229,7 +229,7 @@
                 </div>
               </div>
               <div class="filter-price filter-item">
-                <strong>가격</strong>
+                <strong class="filter-sub-title">가격</strong>
                 <!-- 슬라이더는 나중에 넣는 걸로 -->
                 <div class="filter-inner">
                   <div class="price-slider">
@@ -248,7 +248,7 @@
                 </div>
               </div>
               <div class="filter-type filter-item">
-                <strong>종류</strong>
+                <strong class="filter-sub-title">종류</strong>
                 <div class="filter-inner">
                   <ul class="filter-option-list">
                     <li><a href="#" class="filter-option">여성</a></li>
@@ -258,7 +258,7 @@
                 </div>
               </div>
               <div class="filter-brand filter-item">
-                <strong>브랜드</strong>
+                <strong class="filter-sub-title">브랜드</strong>
                 <div class="filter-inner">
                   <ul class="filter-option-list">
                     <li title="Hartmann"><a href="#" class="filter-option">Hartmann</a></li>
