header 애니메이션 수정-menu 길에 맞게

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </h1>
         <ul class="gnb">
           <li>
-            <span><a href="sub-luggage.html">LUGGAGE</a></span>
+            <a href="sub-luggage.html"><b>LUGGAGE</b></a>
             <div class="gnb-dropdown-wrap">
               <ul class="gnb-dropdown gnb-menu-luggage">
                 <li>
@@ -91,12 +91,12 @@
               </ul>
             </div>
           </li>
-          <li><span><a href="#">BACKPACKS</a></span></li>
-          <li><span><a href="#">BAGS</a></span></li>
-          <li><span><a href="#">ACCESSORIES</a></span></li>
-          <li><span><a href="#">BRANDS</a></span></li>
-          <li><span><a href="#">EXPLORE</a></span></li>
-          <li><span><a href="#">PROMOTION</a></span></li>
+          <li><a href="#"><b>BACKPACKS</b></a></li>
+          <li><a href="#"><b>BAGS</b></a></li>
+          <li><a href="#"><b>ACCESSORIES</b></a></li>
+          <li><a href="#"><b>BRANDS</b></a></li>
+          <li><a href="#"><b>EXPLORE</b></a></li>
+          <li><a href="#"><b>PROMOTION</b></a></li>
         </ul>
         <div class="util">
           <button type="button" class="btn-user">
@@ -120,7 +120,7 @@
         </div>
       </nav>
     </div>
-    <!-- <div class="gnb-bg"></div> -->
+    <div class="gnb-bg"></div>
   </header>
   <hr>
   <!-- //e: header -->
