헤더 서로 곂침 문제를 fadeIn, fadeOut으로 해결 -> 헤더 마저 채우기 시작

--- a/sub-luggage.html
+++ b/sub-luggage.html
@@ -96,13 +96,14 @@
             <div class="gnb-dropdown-wrap">
               <ul class="gnb-dropdown gnb-menu-luggage">
                 <li>
-                  <strong>소재</strong>
-                  <div class="gnb-material">
-                    <a href="#">하드케이스</a>
-                    <a href="#">소프트 케이스</a>
-                    <a href="#">알루미늄</a>
+                  <strong>종류</strong>
+                  <div class="gnb-type">
+                    <a href="#">비즈니스</a>
+                    <a href="#">캐주얼</a>
+                    <a href="#">여성</a>
+                    <a href="#">키즈</a>
                   </div>
-                  <a href="#" class="gnb-link">여행가방 모두 보기</a>
+                  <a href="#" class="gnb-link">백팩 모두 보기</a>
                 </li>
                 <li>
                   <strong>크기</strong>
