PC 헤더 얼추 완료

--- a/sub-luggage.html
+++ b/sub-luggage.html
@@ -38,8 +38,9 @@
                     <a href="#">하드케이스</a>
                     <a href="#">소프트 케이스</a>
                     <a href="#">알루미늄</a>
+
+                    <p class="gnb-link"><a href="#">여행가방 모두 보기</a></p>
                   </div>
-                  <a href="#" class="gnb-link">여행가방 모두 보기</a>
                 </li>
                 <li>
                   <strong>크기</strong>
@@ -56,6 +57,7 @@
                     <a href="#">쿨톤</a>
                     <a href="#">웜톤</a>
                   </div>
+                  <p class="gnb-link"><a href="#">색상 모두 보기</a></p>
                 </li>
                 <li>
                   <strong>주요 기능</strong>
@@ -94,7 +96,7 @@
           <li>
             <a href="#"><b>BACKPACKS</b></a>
             <div class="gnb-dropdown-wrap">
-              <ul class="gnb-dropdown gnb-menu-luggage">
+              <ul class="gnb-dropdown gnb-menu-backpacks">
                 <li>
                   <strong>종류</strong>
                   <div class="gnb-type">
@@ -103,15 +105,7 @@
                     <a href="#">여성</a>
                     <a href="#">키즈</a>
                   </div>
-                  <a href="#" class="gnb-link">백팩 모두 보기</a>
-                </li>
-                <li>
-                  <strong>크기</strong>
-                  <div class="gnb-size">
-                    <a href="#">기내용</a>
-                    <a href="#">중형수하물</a>
-                    <a href="#">대형수하물</a>
-                  </div>
+                  <p class="gnb-link"><a href="#">백팩 모두 보기</a></p>
                 </li>
                 <li>
                   <strong>색상</strong>
@@ -119,19 +113,15 @@
                     <a href="#">모노톤</a>
                     <a href="#">쿨톤</a>
                     <a href="#">웜톤</a>
+
                   </div>
+                  <p class="gnb-link"><a href="#">색상 모두 보기</a></p>
                 </li>
                 <li>
                   <strong>주요 기능</strong>
                   <div class="gnb-function">
-                    <a href="#">이중코일지퍼</a>
-                    <a href="#">자동제어장치</a>
-                    <a href="#">지문인식잠금</a>
-                    <a href="#">마그네틱 지퍼</a>
-                    <a href="#">돌출 잠금</a>
-                    <a href="#">서스펜션 휠</a>
+                    <a href="#">RFID 기능 포켓</a>
                     <a href="#">USB 포트</a>
-                    <a href="#">내장형 저울</a>
                   </div>
                 </li>
                 <li>
@@ -143,22 +133,149 @@
                   </div>
                 </li>
                 <li>
+                  <strong>노트북</strong>
+                  <div class="gnb-latop">
+                    <a href="#">13"</a>
+                    <a href="#">15"</a>
+                    <a href="#">17"</a>
+                  </div>
+                </li>
+                <li>
                   <strong>Collection</strong>
                   <div class="gnb-collection">
-                    <a href="#">Richmon II</a>
-                    <a href="#">SBL Re. classic</a>
-                    <a href="#">C-Lite</a>
-                    <a href="#">Upscape</a>
-                    <a href="#">Toiis Blossom</a>
+                    <a href="#">SBL Mohave</a>
+                    <a href="#">Spectrolite 3</a>
+                    <a href="#">Marston</a>
+                    <a href="#">Jefferson</a>
+                    <a href="#">Candyce</a>
                   </div>
                 </li>
               </ul>
             </div>
           </li>
-          <li><a href="#"><b>BAGS</b></a></li>
-          <li><a href="#"><b>ACCESSORIES</b></a></li>
-          <li><a href="#"><b>BRANDS</b></a></li>
-          <li><a href="#"><b>EXPLORE</b></a></li>
+          <li>
+            <a href="#"><b>BAGS</b></a>
+            <div class="gnb-dropdown-wrap">
+              <ul class="gnb-dropdown gnb-menu-bags">
+                <li>
+                  <strong>종류</strong>
+                  <div class="gnb-type">
+                    <a href="#">서류가방</a>
+                    <a href="#">크로스백</a>
+                    <a href="#">슬링백</a>
+                    <a href="#">토트백</a>
+                    <a href="#">여성</a>
+                    <a href="#">보스턴백</a>
+                    <a href="#">힙색</a>
+                    <a href="#">골프</a>
+                  </div>
+                  <p class="gnb-link"><a href="#">가방 모두 보기</a></p>
+                </li>
+                <li>
+                  <strong>색상</strong>
+                  <div class="gnb-color">
+                    <a href="#">모노톤</a>
+                    <a href="#">쿨톤</a>
+                    <a href="#">웜톤</a>
+                  </div>
+                  <p class="gnb-link"><a href="#">색상 모두 보기</a></p>
+                </li>
+                <li>
+                  <strong>브랜드</strong>
+                  <div class="gnb-brand">
+                    <a href="#"><i class="hidden">Samsonite</i></a>
+                    <a href="#"><i class="hidden">Samsonite Blacklabel</i></a>
+                    <a href="#"><i class="hidden">Samsonite Red</i></a>
+                  </div>
+                </li>
+                <li>
+                  <strong>노트북</strong>
+                  <div class="gnb-latop">
+                    <a href="#">13"</a>
+                    <a href="#">15"</a>
+                  </div>
+                </li>
+                <li>
+                  <strong>Collection</strong>
+                  <div class="gnb-collection">
+                    <a href="#">Tanny</a>
+                    <a href="#">Abbey</a>
+                    <a href="#">Blackjack</a>
+                    <a href="#">Candyce</a>
+                    <a href="#">Osler</a>
+                  </div>
+                </li>
+              </ul>
+            </div>
+          </li>
+          <li>
+            <a href="#"><b>ACCESSORIES</b></a>
+            <div class="gnb-dropdown-wrap">
+              <ul class="gnb-dropdown gnb-menu-accessories">
+                <li>
+                  <strong>종류</strong>
+                  <div class="gnb-type">
+                    <a href="#">지갑 및 벨트</a>
+                    <a href="#">파우치</a>
+                    <a href="#">여권지갑</a>
+                    <a href="#">러기지 커버</a>
+                    <a href="#">목베개</a>
+                    <a href="#">자물쇠</a>
+                    <a href="#">러기지 택</a>
+                  </div>
+                  <p class="gnb-link"><a href="#">액세서리 모두 보기</a></p>
+                </li>
+              </ul>
+            </div>
+          </li>
+          <li>
+            <a href="#"><b>BRANDS</b></a>
+            <div class="gnb-dropdown-wrap">
+              <ul class="gnb-dropdown gnb-menu-brand">
+                <li>
+                  <a href="#">
+                    <img src="./img/gnb-brand-thumb1.jpeg" alt="">
+                    <i class="hidden">samsonite blacklabel</i>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <img src="./img/gnb-brand-thumb2.jpeg" alt="">
+                    <i class="hidden">samsonite</i>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <img src="./img/gnb-brand-thumb3.jpeg" alt="">
+                    <i class="hidden">samsonite red</i>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </li>
+          <li>
+            <a href="#"><b>EXPLORE</b></a>
+            <div class="gnb-dropdown-wrap">
+              <ul class="gnb-dropdown gnb-menu-explore">
+                <li><a href="#">최신소식</a>
+                  <!-- <strong>최신소식</strong>
+                  <div class="gnb-news">
+                    <a href="#">Wedding and Honeymoon</a>
+                    <a href="#">Travel Hard, Travel Smart</a>
+                    <a href="#">Your Business Look</a>
+                    <a href="#">Your Backpack Look</a>
+                    <a href="#">Lavish Travels</a>
+                    <a href="#">Packing의 미학</a>
+                    <a href="#">Take flight</a>
+                  </div>
+                  <p class="gnb-link"><a href="#">최신 뉴스 모두 보기</a></p> -->
+                </li>
+                <li><a href="#">브랜드 스토리</a></li>
+                <li><a href="#">브랜드 라인</a></li>
+                <li><a href="#">SHOP THE LOOK</a></li>
+              </ul>
+            </div>
+          </li>
           <li><a href="#"><b>PROMOTION</b></a></li>
         </ul>
         <div class="util">
