--- a/sub-luggage.html
+++ b/sub-luggage.html
@@ -9,8 +9,8 @@
   <link rel="shortcut icon" href="favicon.png" type="image/png">
 
   <link rel="stylesheet" href="./css/reset.css">
-  <link rel="stylesheet" href="./css/common.css">
   <link rel="stylesheet" href="./css/sub-luggage.css">
+  <link rel="stylesheet" href="./css/common.css">
   <link rel="stylesheet" href="./css/color-swatch.css">
 
   <script src="./js/jquery-3.7.1.min.js"></script>
@@ -474,7 +474,7 @@
                   <div class="item-sort-btn">
                     <button type="button">판매 인기순</button>
                     <ul class="item-sort-list">
-                      <li class="active"><a href="#">판매 인기순</a></li>
+                      <li><a href="#">판매 인기순</a></li>
                       <li><a href="#">신상품</a></li>
                       <li><a href="#">낮은 가격순</a></li>
                       <li><a href="#">높은 가격순</a></li>
