모바일 메뉴 동작 구현, 타블렛 메뉴 동작과 구분 필요

--- a/index.html
+++ b/index.html
@@ -26,67 +26,67 @@
     <ul class="m-gnb">
       <li>
         <strong>LUGGAGE</strong>
-        <ul class="m-gnb-sub m-gnb-luggage">
-          <li>
-            <strong>소재</strong>
-            <div class="m-gnb-subcon">
-              <a href="#">하드케이스</a>
-              <a href="#">소프트 케이스</a>
-              <a href="#">알루미늄</a>
-            </div>
-          </li>
-          <li>
-            <strong>크기</strong>
-            <div class="m-gnb-subcon">
-              <a href="#">기내용</a>
-              <a href="#">중형수하물</a>
-              <a href="#">대형수하물</a>
-            </div>
-          </li>
-          <li>
-            <strong>색상</strong>
-            <div class="m-gnb-subcon m-gnb-color">
-              <a href="#">모노톤</a>
-              <a href="#">쿨톤</a>
-              <a href="#">웜톤</a>
-            </div>
-          </li>
-          <li>
-            <strong>주요 기능</strong>
-            <div class="m-gnb-subcon m-gnb-function">
-              <a href="#">이중코일지퍼</a>
-              <a href="#">자동제어장치</a>
-              <a href="#">지문인식잠금</a>
-              <a href="#">마그네틱 지퍼</a>
-              <a href="#">돌출 잠금</a>
-              <a href="#">서스펜션 휠</a>
-              <a href="#">USB 포트</a>
-              <a href="#">내장형 저울</a>
-            </div>
-          </li>
-          <li>
-            <strong>브랜드</strong>
-            <div class="m-gnb-subcon m-gnb-brand">
-              <a href="#"><i class="hidden">Samsonite</i></a>
-              <a href="#"><i class="hidden">Samsonite Blacklabel</i></a>
-              <a href="#"><i class="hidden">Samsonite Red</i></a>
-            </div>
-          </li>
-          <li>
-            <strong>Collection</strong>
-            <div class="m-gnb-subcon">
-              <a href="#">Richmon II</a>
-              <a href="#">SBL Re. classic</a>
-              <a href="#">C-Lite</a>
-              <a href="#">Upscape</a>
-              <a href="#">Toiis Blossom</a>
-            </div>
-          </li>
-        </ul>
+        <div class="m-gnb-subwrap">
+          <ul class="m-gnb-sub m-gnb-luggage">
+            <li>
+              <strong>소재</strong>
+              <div class="m-gnb-subcon">
+                <a href="#">하드케이스</a>
+                <a href="#">소프트 케이스</a>
+                <a href="#">알루미늄</a>
+              </div>
+            </li>
+            <li>
+              <strong class="m-gnb-li-li-strong">크기</strong>
+              <div class="m-gnb-subcon">
+                <a href="#">기내용</a>
+                <a href="#">중형수하물</a>
+                <a href="#">대형수하물</a>
+              </div>
+            </li>
+            <li>
+              <strong>색상</strong>
+              <div class="m-gnb-subcon m-gnb-color">
+                <a href="#">모노톤</a>
+                <a href="#">쿨톤</a>
+                <a href="#">웜톤</a>
+              </div>
+            </li>
+            <li>
+              <strong>주요 기능</strong>
+              <div class="m-gnb-subcon m-gnb-function">
+                <a href="#">이중코일지퍼</a>
+                <a href="#">자동제어장치</a>
+                <a href="#">지문인식잠금</a>
+                <a href="#">마그네틱 지퍼</a>
+                <a href="#">돌출 잠금</a>
+                <a href="#">서스펜션 휠</a>
+                <a href="#">USB 포트</a>
+                <a href="#">내장형 저울</a>
+              </div>
+            </li>
+            <li>
+              <strong>브랜드</strong>
+              <div class="m-gnb-subcon m-gnb-brand">
+                <a href="#"><i class="hidden">Samsonite</i></a>
+                <a href="#"><i class="hidden">Samsonite Blacklabel</i></a>
+                <a href="#"><i class="hidden">Samsonite Red</i></a>
+              </div>
+            </li>
+            <li>
+              <strong>Collection</strong>
+              <div class="m-gnb-subcon">
+                <a href="#">Richmon II</a>
+                <a href="#">SBL Re. classic</a>
+                <a href="#">C-Lite</a>
+                <a href="#">Upscape</a>
+                <a href="#">Toiis Blossom</a>
+              </div>
+            </li>
+          </ul>
+        </div>
       </li>
-      <li>
-        <strong>BACKPACKS</strong>
-      </li>
+
       <li>
         <strong>BAGS</strong>
       </li>
