24-05-30-15:00, 스크립트 고민중

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
               </div>
             </li>
             <li>
-              <strong class="m-gnb-li-li-strong">크기</strong>
+              <strong>크기</strong>
               <div class="m-gnb-subcon">
                 <a href="#">기내용</a>
                 <a href="#">중형수하물</a>
