Weekly Best, New Arrivals 슬라이더 채워넣기

--- a/sub-luggage.html
+++ b/sub-luggage.html
@@ -7,6 +7,7 @@
   <title>쌤소나이트 공식 온라인몰</title>
 
   <link rel="shortcut icon" href="favicon.png" type="image/png">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/sub-luggage.css">
@@ -14,6 +15,10 @@
   <link rel="stylesheet" href="./css/color-swatch.css">
 
   <script src="./js/jquery-3.7.1.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+
+  <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
   <script src="./js/script.js"></script>
 </head>
 
